# pyupload

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  README.md  TODO.md  docker-compose.yaml  input.css  package-lock.json  package.json  pyproject.toml  tailwind.config.js  test_lib_security.py
app/: main.py
app/api/: __init__.py  auth.py  files.py  uploads.py
app/lib/: auth.py  config.py  file_serving.py  file_storage.py  helpers.py  image_processing.py  scheduler.py  security.py  seeder.py  session_auth.py  upload_handler.py
app/middleware/: fingerprint_auto_login.py  token_refresh.py
app/models/: __init__.py  images.py  legacy.py  pagination.py  refresh_tokens.py  schemas.py  uploads.py  users.py
app/models/common/: base.py  pagination.py
app/models/migrations/models/: 0_20260102175535_init.py  1_20260115090541_implement_refresh_tokens.py  2_20260119210804_add_user_tier_fields.py  2_20260120122400_add_user_tier_fields.py  3_20260124161323_add_upload_image_models_and_constraints.py
app/static/css/: style.css
app/ui/: __init__.py  auth.py  main.py  uploads.py  users.py
app/ui/common/: __init__.py  security.py  session.py
app/ui/templates/: index.html.j2  index.j2  login.html.j2  register.html.j2
docs/: overview.md
docs/planning/: database-schema.md  feature-parity.md  framework-comparison-nicegui-htmx.md  implement-basic-upload-support.md  implement-file-serving.md  implement-home-gallery.md  implement-refresh-tokens.md  implement-three-tier-users.md  implement-ui-polish.md  implement-upload-view-page.md  legacy-database-structure.sql  migrate-flash-messages.md  plan-Authentication.prompt.md  tech-stack-options.md  tech-stack-recommendation.md  v0.1-implementation-plans.md
scripts/: start-app.sh  stop-app.sh
tests/: conftest.py  test_api_files.py  test_api_uploads.py  test_auth_jwt.py  test_auth_session.py  test_integration_file_serving.py  test_lib_auth.py  test_lib_config.py  test_lib_file_serving.py  test_lib_file_storage.py  test_lib_file_storage_cleanup.py  test_lib_helpers.py  test_lib_image_processing.py  test_lib_scheduler.py  test_lib_security.py  test_lib_upload_handler.py  test_middleware_fingerprint_auto_login.py  test_middleware_token_refresh.py  test_models_images.py  test_models_refresh_tokens.py  test_models_uploads.py  test_models_users.py  test_ui_auth.py  test_ui_upload_widget.py  test_ui_uploads.py  test_ui_users.py
(+11 files in other folders)
